--- a/Module-17/Google Map/android/app/src/main/AndroidManifest.xml
+++ b/Module-17/Google Map/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBoU-3Eb3mRfFqJrgVbqBuy7AmhE_dm780"/>
+            android:value="API key"/>
     </application>
 </manifest>
